--- a/package.json
+++ b/package.json
@@ -1,20 +1,40 @@
 {
-  "name": "routing-lib",
+  "name": "client-routing-lib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/router.js",
+  "files": [
+    "./router.js",
+    "./router.d.ts"
+  ],
   "scripts": {
     "test": "jest",
-    "prepare": "husky install"
+    "lint": "prettier --check . && eslint . && npx tsc --noEmit",
+    "lint:fix": "prettier --write . && eslint . && npx tsc --noEmit",
+    "prepare": "husky install",
+    "check-ts": "tsc --noEmit",
+    "start": "webpack serve --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "dmitrygvl",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dmitrygvl/routing-lib.git",
+    "dmitrygvl": "https://github.com/dmitrygvl/routing-lib"
+  },
+  "bugs": {
+    "url": "https://github.com/dmitrygvl/routing-lib/issues"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.11",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "babel-loader": "^9.1.3",
@@ -39,9 +59,14 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "core-js": "^3.35.0"
+    "core-js": "^3.35.0",
+    "uuid": "^9.0.1"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,ts}": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ],
+    "*.{md,yml,json,html}": "prettier . --write"
   }
 }
